modified:   _config.yml 	modified:   _includes/svg-icons.html 	modified:   _layouts/default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,8 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          {% include svg-icons.html %}
+          <!-- {% include svg-icons.html %} -->
+          Copyright 2017
         </footer>
       </div>
     </div>
