--- a/style.scss
+++ b/style.scss
@@ -272,10 +272,12 @@ nav {
 }
 
 .wrapper-footer {
-  margin-top: 50px;
+  // margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
   background-color: $lightGray;
+  position: fixed;  
+  bottom: 0;
 }
 
 footer {
