--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,14 +39,14 @@
       {{ content }}
     </div>
 
-    <div class="wrapper-footer">
+    <!-- <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          <!-- {% include svg-icons.html %} -->
+          {% include svg-icons.html %}
           Copyright 2017
         </footer>
       </div>
-    </div>
+    </div> -->
 
     {% include analytics.html %}
   </body>
