--- a/style.scss
+++ b/style.scss
@@ -171,7 +171,8 @@ img {
 
   @include mobile {
     float: none;
-    display: block;
+    // display: block;
+    visibility: hidden;
     margin: 0 auto;
   }
 
