--- a/style.scss
+++ b/style.scss
@@ -171,7 +171,7 @@ img {
 
   @include mobile {
     float: none;
-    // display: block;
+    display: none;
     visibility: hidden;
     margin: 0 auto;
   }
