fix style for albums.

--- a/style.scss
+++ b/style.scss
@@ -311,7 +311,7 @@ div.desc {
  Image scaling.
 */
 
-.image:hover{
+img:hover{
   color: #424242; 
   -webkit-transition: all .3s ease-in;
   -moz-transition: all .3s ease-in;
