--- a/style.scss
+++ b/style.scss
@@ -319,9 +319,10 @@ img:hover{
   -o-transition: all .3s ease-in;
   transition: all .3s ease-in;
   opacity: 1;
-  transform: scale(1.15);
-  -ms-transform: scale(1.15); /* IE 9 */
-  -webkit-transform: scale(1.15); /* Safari and Chrome */
+  transform: scale(2);
+  -ms-transform: scale(2); /* IE 9 */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  max-width: 95%;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
