more album edits.

--- a/style.scss
+++ b/style.scss
@@ -323,6 +323,7 @@ img:hover{
   -ms-transform: scale(2); /* IE 9 */
   -webkit-transform: scale(2); /* Safari and Chrome */
   max-width: 95%;
+  text-align: center;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
