--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
 	background: #222222;
   font: 18px/1.4 $helvetica;
-  color: $white;
+  color: #FAFAFA;
 }
 
 .container {
@@ -32,7 +32,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: $white;
+  color: $lightGray;
   font-weight: bold;
 
   line-height: 1.7;
