--- a/style.scss
+++ b/style.scss
@@ -201,7 +201,7 @@ pre {
   color: $darkGray;
   cursor: pointer;
   font-family: $helveticaNeue;
-  font-weight: bolder;
+  font-weight: bold;
   font-size: 28px;
   letter-spacing: 1px;
 }
