added new index page instead of blog page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/">Home</a>
+            <a href="{{ site.baseurl }}/blog">Blog</a>
             <a href="{{ site.baseurl }}/software">Software</a>
             <a href="{{ site.baseurl }}/graffiti">Graffiti</a>
             <a href="{{ site.baseurl }}/about">About</a>
