still updating / upgrading as always... mostly css and adding old stuff back.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,8 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/custom.css" | prepend: site.baseurl }}">
 
+    <script src="//code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+
     <!-- Custom Fonts -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
