--- a/css/custom.css
+++ b/css/custom.css
@@ -7,3 +7,27 @@
   border-radius: 10px;
   border: 3px solid #ffffff;
 }
+
+.navbar {
+  background-color: #000000;
+  filter: opacity(75%);
+}
+
+header.intro-header {
+  filter: saturate(400%) grayscale(50%) brightness(130%);
+}
+
+.site-heading h1 {
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+}
+
+.post-heading h1 {
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+}
+
+.subheading {
+  color: #f4f4f4;
+  font-weight: bolder;
+}
