--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article>
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            <div class="col-xs-12">
                 <div class="post-heading">
                     <h3>{{ page.title }}</h3>
                     {% if page.subtitle %}
@@ -18,7 +18,7 @@ layout: default
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            <div class="col-xs-12">
 
                 {{ content }}
 
