--- a/css/custom.css
+++ b/css/custom.css
@@ -1,9 +1,12 @@
 .lightbox {
-  width: 100%;
   max-width: 200px;
   margin: 5px auto;
   height: auto;
   cursor: pointer;
   border-radius: 10px;
   border: 3px solid #ffffff;
+}
+
+.img-responsive {
+  display: inline;
 }
