--- a/css/cyborg.css
+++ b/css/cyborg.css
@@ -1116,15 +1116,11 @@ a:focus {
 figure {
   margin: 0;
 }
-img {
-  vertical-align: middle;
-}
-.img-responsive,
+
 .thumbnail > img,
 .thumbnail a > img,
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
-  display: block;
   max-width: 100%;
   height: auto;
 }
@@ -1140,7 +1136,7 @@ img {
   -webkit-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-  display: inline-block;
+  /* display: inline-block; */
   max-width: 100%;
   height: auto;
 }
