--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -232,7 +232,7 @@ hr.small {
 
 .post-preview {
 	> a {
-		color: @gray-dark;
+		color: #fafafa;
 		&:hover,
 		&:focus {
 			text-decoration: none;
