--- a/css/cyborg.css
+++ b/css/cyborg.css
@@ -1089,7 +1089,7 @@ body {
   font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #888888;
+  color: #eaeaea;
   background-color: #060606;
 }
 input,
@@ -1214,7 +1214,7 @@ h6 .small,
 .h6 .small {
   font-weight: normal;
   line-height: 1;
-  color: #888888;
+  color: #fafafa;
 }
 h1,
 .h1,
@@ -1565,7 +1565,7 @@ pre {
   word-break: break-all;
   word-wrap: break-word;
   color: #282828;
-  background-color: #f5f5f5;
+  background-color: #fafafa;
   border: 1px solid #cccccc;
   border-radius: 4px;
 }
