--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,6 +42,7 @@
                 </ul>
                 <br />
                 <p class="copyright text-muted">Copyright &copy; {{ site.copyright_name }} {{ site.time | date: '%Y' }}</p>
+                <p>Hosted by Github.</p>
             </div>
         </div>
     </div>
