--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,8 @@
 <html lang="en">
 {% include head.html %}
 <body>
-    {% include nav.html %}{{ content }}{% include footer.html %}{% include ga.html %}
+    {% include nav.html %}
+    <div class='container'>{{ content }}</div>
+    {% include footer.html %}{% include ga.html %}
 </body>
 </html>
