--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,52 +1,31 @@
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <ul class="list-inline text-center">
-                    <li>
-                        <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
-                            <span class="fa-stack fa-lg">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
-                            </span>
-                        </a>
-                    </li>{% if site.twitter_username %}<li>
-                        <a href="https://twitter.com/{{ site.twitter_username }}">
-                            <span class="fa-stack fa-lg">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                            </span>
-                        </a>
-                    </li>{% endif %}{% if site.facebook_username %}<li>
-                        <a href="https://www.facebook.com/{{ site.facebook_username }}">
-                            <span class="fa-stack fa-lg">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                            </span>
-                        </a>
-                    </li>{% endif %}{% if site.github_username %}<li>
-                        <a href="https://github.com/{{ site.github_username }}">
-                            <span class="fa-stack fa-lg">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                            </span>
-                        </a>
-                    </li>{% endif %}{% if site.email_username %}<li>
-                        <a href="mailto:{{ site.email_username }}">
-                            <span class="fa-stack fa-lg">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-                            </span>
-                        </a>
-                    </li>{% endif %}
-                </ul>
-                <br />
-                <p class="copyright text-muted">Copyright &copy; {{ site.copyright_name }} {{ site.time | date: '%Y' }}</p>
-                <p class="copyright text-muted">Hosted by Github.</p>
-            </div>
-        </div>
+<!-- footer -->
+<footer class="page-footer" id="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="white-text">Jordan Price</h5>
+        <p class="grey-text text-lighten-4">Father, programmer, security researcher, musician, bit hoarder...</p>
+      </div>
+      <div class="col l4 offset-l2 s12">
+        <h5 class="white-text">Pages</h5>
+        <ul>
+        <li><a href="{{ site.baseurl }}/" style='color: #fff;'>Home</a></li>{% for page in site.pages %}{% if page.title %}{% if page.url != '/404.html' %}
+	    <li><a href="{{ page.url | prepend: site.baseurl }}" style='color: #fff;'>{{ page.title }}</a></li>{% endif %}{% endif %}{% endfor %}
+        </ul>
+      </div>
     </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container">
+    © 2017 Jordan Price
+    </div>
+  </div>
 </footer>
-<script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/bootstrap.min.js " | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/clean-blog.min.js " | prepend: site.baseurl }}"></script>
+<!-- javascript -->
+<script>
+$( document ).ready(function(){
+  $(".button-collapse").sideNav();
+});
+</script>
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
