modified:   _includes/nav.html 	modified:   css/style.css

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <!-- navigation -->
 <nav>
   <div class="nav-wrapper">
-    <a href="/" class="brand-logo">Jordan Price<i class="material-icons">face</i></a>
+    <a href="/" class="brand-logo">Jordan Price</a>
     <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
 	    <li><a href="{{ site.baseurl }}/" style='color: #fff;'>Home</a></li>{% for page in site.pages %}{% if page.title %}{% if page.url != '/404.html' %}
